--- a/assets/css/basic.css
+++ b/assets/css/basic.css
@@ -17,3 +17,13 @@ h1,h2,h3,h4,h5,h6 {
 	font-weight: 500;
 	text-align: center;
 }
+
+h2{
+	font-size: 38px;
+	line-height: 50px;
+	letter-spacing: -0.02em;
+}
+
+p {
+	font-family: 'Roboto', sans-serif;
+}
