--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,7 +227,7 @@
 
 .projects {
 	max-width: 1008px;
-	display: grid-inline;
+	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	margin: 0 auto;
 }
