--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,11 @@
 @import url('basic.css');
 
-* {
-	margin: 0;
-	padding: 0;
-}
-
-.topnav {
-	padding-top: 22px;
-	padding-bottom: 22px;
+nav {
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+	padding-top: 22px;
+	padding-bottom: 22px;
 	background-color: var(--general_color);
 }
 
@@ -23,11 +18,11 @@
 	text-align: center;
 	vertical-align: middle;
 	padding: 12px 27px;
-	color: var(--basic_color);
-	background-color: var(--general_color);
+	border: 1px solid #fff;
 	font-family: 'Roboto';
 	text-decoration: none;
-	border: 1px solid #fff;
+	color: var(--basic_color);
+	background-color: var(--general_color);
 	cursor: pointer;
 }
 
@@ -52,8 +47,8 @@
 }
 
 .noactive {
+	color: var(--third_color);
 	pointer-events: none;
-	color: #828282;
 }
 
 .home {
@@ -64,9 +59,9 @@
 	max-width: 100%;
 	width: 100%;
 	min-width: 10%;
+	min-height: 640px;
 	background: url('../img/Background.jpg') no-repeat center;
 	background-size: cover;
-	min-height: 640px;
 }
 
 .home h1 {
@@ -78,22 +73,22 @@
 .apply_now {
 	margin-top: 24px;
 	padding: 17px 117px;
+	border: 0;
 	font-family: 'Roboto', sans-serif;
 	font-weight: 500;
 	font-size: 20px;
 	line-height: 23px;
 	background-color: var(--secondary_color);
 	color: var(--basic_color);
-	border: 0;
 }
 
 .programm_block {
-	margin-bottom: 64px;
-	max-width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+	margin-bottom: 64px;
+	max-width: 100%;
 }
 
 .programm_block h2 {
@@ -112,14 +107,13 @@
 }
 
 .programm_selection_block {
-	max-width: 100%;
-	/*min-width: 1000px;*/
-	text-align: center;
+	margin: 0;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 	flex-wrap: wrap;
-	margin: 0;
+	text-align: center;
+	max-width: 100%;
 }
 
 .programm_selection_block div {
@@ -132,7 +126,27 @@
 	border-radius: 6px;
 }
 
-.programm_selection_block div h3 {
+.programm_selection_block mark {
+	font-family: 'Roboto', sans-serif;
+	font-weight: bold;
+	font-size: 14px;
+	line-height: 30px;
+	color: var(--secondary_color);
+	background-color: var(--basic_color);
+	text-transform: uppercase;
+}
+
+.full_time_programm_block mark {
+	margin-left: 174px;
+	margin-right: 174px;
+}
+
+.part-time_programm_block mark {
+	margin-left: 170px;
+	margin-right: 170px;
+}
+
+.programm_selection_block h3 {
 	font-size: 32px;
 	line-height: 30px;
 	letter-spacing: -0.02em;
@@ -145,16 +159,6 @@
 	color: var(--third_color);
 }
 
-.programm_selection_block mark {
-	font-family: 'Roboto', sans-serif;
-	font-weight: bold;
-	font-size: 14px;
-	line-height: 30px;
-	text-transform: uppercase;
-	color: var(--secondary_color);
-	background-color: var(--basic_color);
-}
-
 .full_time_programm_block {
 	margin-right: 24px;
 }
@@ -163,18 +167,8 @@
 	max-width: 230px;
 }
 
-.full_time_programm_block mark {
-	margin-left: 174px;
-	margin-right: 174px;
-}
-
 .part-time_programm_block p {
 	max-width: 440px;
-}
-
-.part-time_programm_block mark {
-	margin-left: 170px;
-	margin-right: 170px;
 }
 
 .information_block {
@@ -190,11 +184,11 @@
 }
 
 .static_block {
-	margin-top: 24px;
-	padding-bottom: 64px;
 	display: inline-grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	text-align: center;
+	margin-top: 24px;
+	padding-bottom: 64px;
 }
 
 .static_block h3 {
@@ -209,8 +203,8 @@
 	font-weight: 500;
 	font-size: 20px;
 	line-height: 160%;
-	text-transform: uppercase;
 	color: var(--general_color);
+	text-transform: uppercase;
 }
 
 .project_block {
@@ -226,28 +220,28 @@
 }
 
 .projects {
-	max-width: 1008px;
+	margin: 0 auto;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
-	margin: 0 auto;
+	max-width: 1008px;
 }
 
 .projects > div {
 	max-width: 320px;
 	margin-top: 20px;
 	margin-left: 24px;
-	filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.2));
 	background-color: var(--basic_color);
+	filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.2));
 }
 
-.projects > div img {
+.projects img {
 	max-width: 100%;
 	width: 100%;
 	min-width: 10%;
 	border-bottom: 1px solid #000;
 }
 
-.projects > div  p {
+.projects p {
 	margin-top: 11px;
 	margin-bottom: 11px;
 	font-family: 'Roboto', sans-serif;
@@ -267,10 +261,10 @@
 }
 
 .main_students_block {
-	margin-top: 48px;
-	text-align: center;
 	display: inline-grid;
 	grid-template-columns: 1fr 1fr 1fr;
+	text-align: center;
+	margin-top: 48px;
 }
 
 .student-s_personal_block {
@@ -298,12 +292,12 @@
 }
 
 .teacher-s_block {
-	text-align: center;
-	margin-top: 64px;
-	margin-bottom: 64px;
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
+	text-align: center;
+	margin-top: 64px;
+	margin-bottom: 64px;
 }
 
 .teacher-s_block h2 {
